# TcpServer

./: CMakeLists.txt  Config.cpp  Config.h  GPGGA1001  GPGGA1001.txt  GPGGA1002  GPGGA1002.txt  GPGGA1003  GPGGA1003.txt  GPGGA1004  GPGGA1004.txt  TcpServer.cpp  TcpServer.h  TcpServerCUI.ui  main.cpp  uiServerWidget.cpp  uiServerWidget.h  uiServerWidget.ui  uiSingleServerWidget.cpp  uiSingleServerWidget.h  uiSingleServerWidget.ui  uiTestDataCreatWidget.cpp  uiTestDataCreatWidget.h  uiTestDataCreatWidget.ui
